--- a/templates/application.html
+++ b/templates/application.html
@@ -5,7 +5,7 @@
 
   <!-- Title -->
   <title>
-    Display Table
+    Health Connect
   </title>
 
   <!-- JavaScript -->
@@ -15,6 +15,8 @@
   <!-- CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='images/logo_green_small.png') }}" type="image/x-icon"/>
+  <script src="https://kit.fontawesome.com/aa7a9d0c86.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -57,7 +59,7 @@
         <i>
           <h4 style="text-align: left">We're here to help!</h4>
         </i>
-
+        <br>
         <div class="content-section">
           <form method="POST" action="">
             {{ form.hidden_tag() }}
@@ -71,11 +73,13 @@
               <!-- Facilities input -->
               <div class="form-group">
                 {{ form.facility.label(class="form-control-label") }}
+                <i class='fas fa-info-circle' data-toggle="tooltip" title="Total time before seeing a health professional!" style='font-size:18px; color:#9e9e9e; margin-left: 10px;'></i>
                 {{ form.facility(class="form-control form-control-lg") }}
               </div>
               <!-- Wait Time input -->
               <div class="form-group">
                 {{ form.wait_time.label(class="form-control-label") }}
+                <i class='fas fa-info-circle' data-toggle="tooltip" title="Total time before seeing a health professional!" style='font-size:18px; color:#9e9e9e; margin-left: 10px;'></i>
                 {{ form.wait_time(class="form-control form-control-lg") }}
               </div>
             </fieldset>
@@ -114,15 +118,11 @@
                 <!-- Icon -->
                 <td>
                   {% if facility_type|string() == 'Ambulatory health care services' %}
-                  <img data-toggle="tooltip" title="Ambulatory health care services"
-                    src="{{ url_for('static', filename='images/ambulance.png') }}" width="60px" id="">
-                  </img>
+                  <img data-toggle="tooltip" title="Ambulatory health care services" src="{{ url_for('static', filename='images/ambulance.png') }}" width="60px"></img>
                   {% elif facility_type|string() == 'Nursing and residential care facilities' %}
-                  <img data-toggle="tooltip" title="Nursing and residential care facilities"
-                    src="{{ url_for('static', filename='images/nursing.png') }}" width="60px"> </img>
+                  <img data-toggle="tooltip" title="Nursing and residential care facilities" src="{{ url_for('static', filename='images/nursing.png') }}" width="60px"></img>
                   {% else %}
-                  <img data-toggle="tooltip" title="Hospital"
-                    src="{{ url_for('static', filename='images/hospital.png') }}" width="60px"></img>
+                  <img data-toggle="tooltip" title="Hospital" src="{{ url_for('static', filename='images/hospital.png') }}" width="60px"></img>
                   {% endif %}
                 </td>
                 <!-- Facility Name -->
