--- a/templates/application.html
+++ b/templates/application.html
@@ -73,13 +73,13 @@
               <!-- Facilities input -->
               <div class="form-group">
                 {{ form.facility.label(class="form-control-label") }}
-                <i class='fas fa-info-circle' data-toggle="tooltip" title="Total time before seeing a health professional!" style='font-size:18px; color:#9e9e9e; margin-left: 10px;'></i>
+                <i class='fas fa-info-circle' data-toggle="tooltip" title="Type of healthcare" style='font-size:18px; color:#9e9e9e; margin-left: 10px;'></i>
                 {{ form.facility(class="form-control form-control-lg") }}
               </div>
               <!-- Wait Time input -->
               <div class="form-group">
                 {{ form.wait_time.label(class="form-control-label") }}
-                <i class='fas fa-info-circle' data-toggle="tooltip" title="Total time before seeing a health professional!" style='font-size:18px; color:#9e9e9e; margin-left: 10px;'></i>
+                <i class='fas fa-info-circle' data-toggle="tooltip" title="Total time before seeing a health professional" style='font-size:18px; color:#9e9e9e; margin-left: 10px;'></i>
                 {{ form.wait_time(class="form-control form-control-lg") }}
               </div>
             </fieldset>
